@@ -1,5 +1,7 @@
 Version 3.18
 
+* BUGFIX: Invalid hash algorithm negative value is not ISO standard.
+
 2018-08-27 release(3.18.2836)
 * FEATURE: High Availability add-on to the non-blocking network interface.
 * FEATURE: Added max tree level to tree builder.
